hphp/hack/test/typecheck/magic_methods/__construct.php.legacy_decl.exp
File "__construct.php", line 11, characters 10-20:
`__construct` is a magic method and cannot be called directly (NastCheck[3011])
File "__construct.php", line 11, characters 10-20:
`__construct` is not an instance method and shouldn't be invoked directly (Typing[4463])
